--- a/package.json
+++ b/package.json
@@ -20,8 +20,15 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@auth0/angular-jwt": "^1.0.0-beta.11",
+    "@ng-bootstrap/ng-bootstrap": "^3.3.0",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
+    "jwt-decode": "^2.2.0",
+    "ngx-bootstrap": "^3.0.1",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
