--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
+    "@angular/animations": "^6.1.10",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
@@ -27,6 +27,8 @@
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
     "ngx-bootstrap": "^3.0.1",
+    "primeicons": "^1.0.0",
+    "primeng": "^6.1.5",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.3.3",
     "zone.js": "^0.8.26"
