--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^3.3.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "gojs": "^1.8.32",
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
     "ngx-bootstrap": "^3.0.1",
