--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
     "ngx-bootstrap": "^3.0.1",
+    "ngx-papaparse": "^3.0.0",
     "primeicons": "^1.0.0",
     "primeng": "^6.1.5",
     "rxjs": "^6.0.0",
