--- a/package.json
+++ b/package.json
@@ -12,21 +12,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.10",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
-    "@auth0/angular-jwt": "^1.0.0-beta.11",
-    "@ng-bootstrap/ng-bootstrap": "^3.3.0",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/router": "^6.1.10",
+    "@auth0/angular-jwt": "^1.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^3.3.1",
+    "@types/jquery": "^3.3.22",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "fullcalendar": "^3.6.1",
     "gojs": "^1.8.32",
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
+    "ng-fullcalendar": "^1.7.0",
     "ngx-bootstrap": "^3.0.1",
     "ngx-papaparse": "^3.0.0",
     "primeicons": "^1.0.0",
@@ -38,8 +41,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
     "@angular/cli": "~6.1.0",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/language-service": "^6.1.10",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
