Diseño: Estilos mejorados | Calendario: Eventos aclarados

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gojs": "^1.8.32",
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.22.2",
     "ng-fullcalendar": "^1.7.0",
     "ngx-bootstrap": "^3.0.1",
     "ngx-papaparse": "^3.0.0",
